--- a/Elektroformel/Properties/Resources.resx
+++ b/Elektroformel/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="ohm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ohm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="oNmS9PN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\oNmS9PN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
